--- a/Habits/Base.lproj/Main.storyboard
+++ b/Habits/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
                             <outlet property="delegate" destination="gXL-9f-Avz" id="wJj-4D-O6f"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="t0Z-Tq-Kn2"/>
+                    <navigationItem key="navigationItem" title="Home" id="t0Z-Tq-Kn2"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mfd-fs-byf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -87,19 +87,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="e8c-Ip-y2w">
-                            <size key="itemSize" width="128" height="128"/>
+                            <size key="itemSize" width="393" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gu1-nv-Y2C">
-                                <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Habit" id="gu1-nv-Y2C" customClass="UICollectionViewListCell">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="BUt-hY-GsP">
-                                    <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </collectionViewCellContentView>
+                                <size key="customSize" width="393" height="50"/>
                                 <connections>
                                     <segue destination="gpg-SP-l36" kind="show" id="2vJ-LL-xJI"/>
                                 </connections>
@@ -110,11 +111,11 @@
                             <outlet property="delegate" destination="obd-g7-QrL" id="xDv-oz-IdD"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="6JK-iH-iQ8"/>
+                    <navigationItem key="navigationItem" title="Habits" id="6JK-iH-iQ8"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LHy-XZ-fEL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-289" y="-225"/>
+            <point key="canvasLocation" x="-289.3129770992366" y="-225.35211267605635"/>
         </scene>
         <!--Habit Detail View Controller-->
         <scene sceneID="cBy-Jp-UiM">
@@ -197,7 +198,7 @@
                             <outlet property="delegate" destination="PVJ-eX-TRU" id="4Nx-qe-hQF"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="Lid-0g-net"/>
+                    <navigationItem key="navigationItem" title="People" id="Lid-0g-net"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OiE-KJ-lTf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -249,7 +250,7 @@
                             <outlet property="delegate" destination="yVL-KL-Njj" id="p7L-ax-Yxn"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="8zm-kb-DR7"/>
+                    <navigationItem key="navigationItem" title="Log Habits" id="8zm-kb-DR7"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pTD-NL-Epv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
