--- a/Habits/Base.lproj/Main.storyboard
+++ b/Habits/Base.lproj/Main.storyboard
@@ -121,17 +121,83 @@
         <scene sceneID="cBy-Jp-UiM">
             <objects>
                 <viewController id="gpg-SP-l36" customClass="HabitDetailViewController" customModule="Habits" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="YBU-78-nHs" customClass="había">
+                    <view key="view" contentMode="scaleToFill" id="YBU-78-nHs">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="AOE-TL-aIR">
+                                <rect key="frame" x="16" y="123" width="361" height="77"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="firstBaseline" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Arh-jO-KJB">
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="40.666666666666664"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Habit Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ueV-F7-cGa">
+                                                <rect key="frame" x="0.0" y="0.0" width="172.33333333333334" height="40.666666666666664"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hr0-AA-Kq7">
+                                                <rect key="frame" x="298" y="18" width="63" height="18"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Info" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQX-nf-qJe">
+                                        <rect key="frame" x="0.0" y="56.666666666666664" width="361" height="20.333333333333336"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="c2i-in-dJp">
+                                <rect key="frame" x="0.0" y="220" width="393" height="549"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="iIu-gc-XZo">
+                                    <size key="itemSize" width="393" height="44"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UserCount" id="YOr-wV-Qb1" customClass="UICollectionViewLIstCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="irP-G7-A9h">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="393" height="44"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="EW7-Nh-kus"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="EW7-Nh-kus" firstAttribute="trailing" secondItem="c2i-in-dJp" secondAttribute="trailing" id="5zh-TH-adH"/>
+                            <constraint firstItem="c2i-in-dJp" firstAttribute="leading" secondItem="EW7-Nh-kus" secondAttribute="leading" id="I9f-dF-M8l"/>
+                            <constraint firstItem="c2i-in-dJp" firstAttribute="top" secondItem="AOE-TL-aIR" secondAttribute="bottom" constant="20" id="KZm-eJ-DTT"/>
+                            <constraint firstItem="EW7-Nh-kus" firstAttribute="bottom" secondItem="c2i-in-dJp" secondAttribute="bottom" id="YRh-Hv-har"/>
+                            <constraint firstItem="AOE-TL-aIR" firstAttribute="leading" secondItem="EW7-Nh-kus" secondAttribute="leading" constant="16" id="b9I-gk-KOK"/>
+                            <constraint firstItem="AOE-TL-aIR" firstAttribute="top" secondItem="EW7-Nh-kus" secondAttribute="top" constant="20" id="e9R-42-2i1"/>
+                            <constraint firstItem="EW7-Nh-kus" firstAttribute="trailing" secondItem="AOE-TL-aIR" secondAttribute="trailing" constant="16" id="zWZ-qW-pdE"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="7iR-23-S4A"/>
+                    <connections>
+                        <outlet property="categoryLabel" destination="hr0-AA-Kq7" id="VF3-PG-eIC"/>
+                        <outlet property="collectionView" destination="c2i-in-dJp" id="iDp-Fr-Vzh"/>
+                        <outlet property="infoLabel" destination="nQX-nf-qJe" id="Wi3-V6-SEM"/>
+                        <outlet property="nameLabel" destination="ueV-F7-cGa" id="pJN-wF-RFI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nUs-7S-rQh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-289" y="524"/>
+            <point key="canvasLocation" x="-289.3129770992366" y="523.94366197183103"/>
         </scene>
         <!--User Detail View Controller-->
         <scene sceneID="12d-sh-ml8">
